--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,13 @@
         "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3",
         "tedivm/stash": "^0.14.2",
-        "symfony/dependency-injection": "3.0",
-        "symfony/config": "3.0"
+        "symfony/dependency-injection": "^3.0",
+        "symfony/config": "^3.0"
+    },
+    "config": {
+        "platform": {
+            "php": "5.6.1"
+        }
     },
     "autoload": {
       "psr-4"   : {
